# card-ecg

./: .clang-format  .gitattributes  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Dockerfile  Doxyfile  Makefile  README.md  README_8md.html  adc_8c.html  adc_8c.js  adc_8c__incl.map  adc_8c__incl.md5  adc_8c_a2b815e6730e8723a6d1d06d9ef8f31c0_cgraph.map  adc_8c_a2b815e6730e8723a6d1d06d9ef8f31c0_cgraph.md5  adc_8c_a2b815e6730e8723a6d1d06d9ef8f31c0_icgraph.map  adc_8c_a60b155fef3605a22cb31eeccde3439bd_icgraph.map  adc_8c_a60b155fef3605a22cb31eeccde3439bd_icgraph.md5  adc_8c_a9f34e77e8869e814c97a799c3508f142_icgraph.map  adc_8c_a9f34e77e8869e814c97a799c3508f142_icgraph.md5  adc_8c_aa6d15813e162652c9d7bf66ea4a9b094_icgraph.md5  adc_8c_af5ce9946f045a1396ac1a147252a3e76_icgraph.map  adc_8c_af600f4c358f87c62d5f36bb2dab9c012_icgraph.map  adc_8c_af600f4c358f87c62d5f36bb2dab9c012_icgraph.md5  adc_8h.html  adc_8h.js  adc_8h__dep__incl.map  adc_8h__dep__incl.md5  adc_8h__incl.map  adc_8h__incl.md5  adc_8h_a1fdafc62b2a1b676065a2d44766795a6_icgraph.md5  adc_8h_a2b815e6730e8723a6d1d06d9ef8f31c0_cgraph.map  adc_8h_a2b815e6730e8723a6d1d06d9ef8f31c0_cgraph.md5  adc_8h_a2b815e6730e8723a6d1d06d9ef8f31c0_icgraph.map  adc_8h_a2b815e6730e8723a6d1d06d9ef8f31c0_icgraph.md5  adc_8h_a60b155fef3605a22cb31eeccde3439bd_icgraph.map  adc_8h_a60b155fef3605a22cb31eeccde3439bd_icgraph.md5  adc_8h_aa6d15813e162652c9d7bf66ea4a9b094_icgraph.map  adc_8h_af5ce9946f045a1396ac1a147252a3e76_icgraph.md5  (+442 more)
.devcontainer/: devcontainer.json
.github/workflows/: docs.yml  main.yml  static-analysis.yml  tests.yml  unit-tests.yml
.hooks/: pre-commit
common/: ADUC706x.h  CMakeLists.txt  Startup.S  aduc706x.h  aduc706x_rom.ld
docs/: Doxyfile  doxygen.sh
inc/: adc.h  dac.h  display.h  display_drv.h  display_registers.h  font.h  framebuffer.h  image.h  led.h  logo.h  main.h  my_assert.h  my_printf.h  ring_buffer.h  runtime_error.h  spi.h  superloop.h  system.h  timer.h  uart.h  uart_drv.h
inc/display/: display.h  font.h  framebuffer.h  image.h  logo.h
inc/drivers/: board.h  dac.h  display_drv.h  spi.h  system.h  timer.h  uart.h
inc/utils/: my_assert.h  ring_buffer.h
search/: all_0.js  all_1.js  all_10.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  defines_6.js  defines_7.js  defines_8.js  defines_9.js  defines_a.js  defines_b.js  defines_c.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  files_7.js  files_8.js  files_9.js  (+28 more)
src/: ADUC7061-ROM.ld  ADUC706x-ROM.ld  CMakeLists.txt  Startup.S  adc.c  crt.S  dac.c  display.c  display_drv.c  font.c  framebuffer.c  image.c  led.c  logo.c  main.c  my_assert.c  ring_buffer.c  runtime_error.c  runtime_error.cpp  spi.c  superloop.c  system.c  timer.c  uart.c  uart_drv.c
src/display/: CMakeLists.txt  display.c  font.c  framebuffer.c  image.c  logo.c
src/drivers/: CMakeLists.txt  adc.c  board.c  dac.c  display_drv.c  led.c  spi.c  system.c  timer.c  uart.c  uart_drv.c
src/utils/: CMakeLists.txt  my_assert.c  ring_buffer.c
static-analysis/: 01-code-complexity.sh  01-code-linter.sh  02-code-linter.sh  04-clang-tidy.sh  cppc-supp.txt
static_analysis/: 01-code-linter.sh
test/: test_adc.c  test_display.c  test_framebuffer.c  test_led.c  test_main.c  test_ring_buffer.c  test_spi.c  test_superloop.c  test_system.c  test_timer.c  test_uart.c
test/support/: runtime_error_stub.c  runtime_error_stub.h  testable_mcu_registers.h
tests/Ceedling/: 02-code-coverage.sh  code-coverage.sh  project.yml  unit-tests.sh
tests/Ceedling/test/: test_adc.c  test_dac.c  test_display.c  test_display_drv.c  test_framebuffer.c  test_led.c  test_main.c  test_ring_buffer.c  test_spi.c  test_superloop.c  test_system.c  test_timer.c  test_uart.c  test_uart_drv.c
tests/Ceedling/test/support/: my_assert_stub.c  my_assert_stub.h  testable_mcu_registers.h
tests/StaticAnalysis/: .clang-tidy  .cppcheck  .gitignore  00-dependency-graph.sh  01-code-complexity.sh  02-code-linter.sh  02-cppcheck.sh  03-clang-tidy.sh  04-clang-tidy.sh  04-doxygen.sh  Doxyfile  clang-tidy.sh  code-complexity.sh  cppcheck.sh
